Fixed bug in convertRGtoMatrix with map coping. Project converted to Java 8.